More fixes on PVs
Roc and Fem config params were not created. Max number of
params was too low, preventing all params to get created.
Some template typos. Making sure ioc starts without errors.

--- a/ned/nedApp/Db/DspPlugin.template
+++ b/ned/nedApp/Db/DspPlugin.template
@@ -2391,12 +2391,14 @@ record(mbbo, "$(P)$(R)LvdsTxTcCtrl")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))LvdsTxTcCtrl")
     field(SCAN, "I/O Intr")
     field(VAL,  "0")
-    field(ZRVL, "0-1")
+    field(ZRVL, "0")
     field(ZRST, "TCLK")
-    field(ONVL, "2")
-    field(ONST, "always 0")
-    field(TWVL, "3")
-    field(TWST, "always 1")
+    field(ONVL, "1")
+    field(ONST, "TCLK")
+    field(TWVL, "2")
+    field(TWST, "always 0")
+    field(THVL, "3")
+    field(THST, "always 1")
 }
 record(mbbo, "$(P)$(R)LvdsTscynoMo")
 {
@@ -2901,8 +2903,10 @@ record(mbbo, "$(P)$(R)SysStartStopM")
     field(ZRST, "normal")
     field(ONVL, " 1")
     field(ONST, "fake data mode")
-    field(TWVL, "2-3")
+    field(TWVL, "2")
     field(TWST, "not defined")
+    field(THVL, "3")
+    field(THST, "not defined")
 }
 record(bo, "$(P)$(R)SysFakeTrigEn")
 {
