--- a/ned/nedApp/Db/FemPlugin.template
+++ b/ned/nedApp/Db/FemPlugin.template
@@ -63,7 +63,8 @@ record(longin, "$(P)$(R)FirmwareVer")
     field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))FwVer")
     field(VAL,   "0")
     field(SCAN, "I/O Intr")
-}record(bo, "$(P)$(R)Ch2FifoFull")
+}
+record(bo, "$(P)$(R)Ch2FifoFull")
 {
     field(DESC, "Chan2 FIFO went full")
     field(DTYP, "asynInt32")
@@ -1307,12 +1308,12 @@ record(mbbo, "$(P)$(R)LvdsDin6")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin5")
 {
@@ -1322,12 +1323,12 @@ record(mbbo, "$(P)$(R)LvdsDin5")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin4")
 {
@@ -1337,12 +1338,12 @@ record(mbbo, "$(P)$(R)LvdsDin4")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin3")
 {
@@ -1352,12 +1353,12 @@ record(mbbo, "$(P)$(R)LvdsDin3")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin2")
 {
@@ -1367,12 +1368,12 @@ record(mbbo, "$(P)$(R)LvdsDin2")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin1")
 {
@@ -1382,12 +1383,12 @@ record(mbbo, "$(P)$(R)LvdsDin1")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin0")
 {
@@ -1397,12 +1398,12 @@ record(mbbo, "$(P)$(R)LvdsDin0")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsClk")
 {
@@ -1412,12 +1413,12 @@ record(mbbo, "$(P)$(R)LvdsClk")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin14")
 {
@@ -1427,12 +1428,12 @@ record(mbbo, "$(P)$(R)LvdsDin14")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin13")
 {
@@ -1442,12 +1443,12 @@ record(mbbo, "$(P)$(R)LvdsDin13")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin12")
 {
@@ -1457,12 +1458,12 @@ record(mbbo, "$(P)$(R)LvdsDin12")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin11")
 {
@@ -1472,12 +1473,12 @@ record(mbbo, "$(P)$(R)LvdsDin11")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin10")
 {
@@ -1487,12 +1488,12 @@ record(mbbo, "$(P)$(R)LvdsDin10")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin9")
 {
@@ -1502,12 +1503,12 @@ record(mbbo, "$(P)$(R)LvdsDin9")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin8")
 {
@@ -1517,12 +1518,12 @@ record(mbbo, "$(P)$(R)LvdsDin8")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin7")
 {
@@ -1532,12 +1533,12 @@ record(mbbo, "$(P)$(R)LvdsDin7")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(longout, "$(P)$(R)LvdsPort")
 {
@@ -1554,12 +1555,12 @@ record(mbbo, "$(P)$(R)LvdsDin20")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin19")
 {
@@ -1569,12 +1570,12 @@ record(mbbo, "$(P)$(R)LvdsDin19")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin18")
 {
@@ -1584,12 +1585,12 @@ record(mbbo, "$(P)$(R)LvdsDin18")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin17")
 {
@@ -1599,12 +1600,12 @@ record(mbbo, "$(P)$(R)LvdsDin17")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin16")
 {
@@ -1614,12 +1615,12 @@ record(mbbo, "$(P)$(R)LvdsDin16")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(mbbo, "$(P)$(R)LvdsDin15")
 {
@@ -1629,12 +1630,12 @@ record(mbbo, "$(P)$(R)LvdsDin15")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
     field(ZRST, "empty")
-    field(ZRVL, "1")
-    field(ZRST, "always low")
-    field(ZRVL, "2")
-    field(ZRST, "always high")
-    field(ZRVL, "3")
-    field(ZRST, "low and high")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
 }
 record(bo, "$(P)$(R)LvdsMonitor")
 {
@@ -1655,12 +1656,12 @@ record(mbbo, "$(P)$(R)TxenCtrl")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "TXEN")
-    field(ZRVL, "1")
-    field(ZRST, "TXEN")
-    field(ZRVL, "2")
-    field(ZRST, "always 0")
-    field(ZRVL, "3")
-    field(ZRST, "always 1")
+    field(ONVL, "1")
+    field(ONST, "TXEN")
+    field(TWVL, "2")
+    field(TWST, "always 0")
+    field(THVL, "3")
+    field(THST, "always 1")
 }
 record(mbbo, "$(P)$(R)TsyncCtrl")
 {
@@ -1671,12 +1672,12 @@ record(mbbo, "$(P)$(R)TsyncCtrl")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "from polariry")
-    field(ZRVL, "1")
-    field(ZRST, "from TSYNC width")
-    field(ZRVL, "2")
-    field(ZRST, "always 0")
-    field(ZRVL, "3")
-    field(ZRST, "always 1")
+    field(ONVL, "1")
+    field(ONST, "from TSYNC width")
+    field(TWVL, "2")
+    field(TWST, "always 0")
+    field(THVL, "3")
+    field(THST, "always 1")
 }
 record(mbbo, "$(P)$(R)TclkCtrl")
 {
@@ -1687,12 +1688,12 @@ record(mbbo, "$(P)$(R)TclkCtrl")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "TCLK")
-    field(ZRVL, "1")
-    field(ZRST, "TCLK")
-    field(ZRVL, "2")
-    field(ZRST, "always 0")
-    field(ZRVL, "3")
-    field(ZRST, "always 1")
+    field(ONVL, "1")
+    field(ONST, "TCLK")
+    field(TWVL, "2")
+    field(TWST, "always 0")
+    field(THVL, "3")
+    field(THST, "always 1")
 }
 record(mbbo, "$(P)$(R)ResetCtrl")
 {
@@ -1703,12 +1704,12 @@ record(mbbo, "$(P)$(R)ResetCtrl")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "not used")
-    field(ZRVL, "1")
-    field(ZRST, "not used")
-    field(ZRVL, "2")
-    field(ZRST, "from LVDS")
-    field(ZRVL, "3")
-    field(ZRST, "from optic")
+    field(ONVL, "1")
+    field(ONST, "not used")
+    field(TWVL, "2")
+    field(TWST, "from LVDS")
+    field(THVL, "3")
+    field(THST, "from optic")
 }
 record(bo, "$(P)$(R)VerboseDisc")
 {
