--- a/ned/nedApp/Db/RocPlugin.template
+++ b/ned/nedApp/Db/RocPlugin.template
@@ -479,18 +479,18 @@ record(longout, "$(P)$(R)Ch1ASlope")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch1ASlope")
     field(SCAN, "I/O Intr")
 }
-record(longout, "$(P)$(R)Ch1BAdcOff")
+record(longout, "$(P)$(R)Ch1BAdcOffs")
 {
     field(DESC, "Chan1 B ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch1BAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch1BAdcOffs")
     field(SCAN, "I/O Intr")
 }
-record(longout, "$(P)$(R)Ch1AAdcOff")
+record(longout, "$(P)$(R)Ch1AAdcOffs")
 {
     field(DESC, "Chan1 A ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch1AAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch1AAdcOffs")
     field(SCAN, "I/O Intr")
 }
 record(bo, "$(P)$(R)Ch1BAdjEn")
@@ -642,11 +642,11 @@ record(bo, "$(P)$(R)Ch1NotEmpty")
     field(ZNAM, "no")
     field(ONAM, "yes")
 }
-record(longout, "$(P)$(R)Ch2AAdcOff")
+record(longout, "$(P)$(R)Ch2AAdcOffs")
 {
     field(DESC, "Chan2 A ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch2AAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch2AAdcOffs")
     field(SCAN, "I/O Intr")
 }
 record(bo, "$(P)$(R)Ch2AAdjEn")
@@ -719,11 +719,11 @@ record(longout, "$(P)$(R)Ch2BSlope")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch2BSlope")
     field(SCAN, "I/O Intr")
 }
-record(longout, "$(P)$(R)Ch2BAdcOff")
+record(longout, "$(P)$(R)Ch2BAdcOffs")
 {
     field(DESC, "Chan2 B ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch2BAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch2BAdcOffs")
     field(SCAN, "I/O Intr")
 }
 record(longout, "$(P)$(R)Ch4BSlope")
@@ -733,11 +733,11 @@ record(longout, "$(P)$(R)Ch4BSlope")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch4BSlope")
     field(SCAN, "I/O Intr")
 }
-record(longout, "$(P)$(R)Ch4BAdcOff")
+record(longout, "$(P)$(R)Ch4BAdcOffs")
 {
     field(DESC, "Chan4 B ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch4BAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch4BAdcOffs")
     field(SCAN, "I/O Intr")
 }
 record(bo, "$(P)$(R)Ch4AdcMax")
@@ -945,18 +945,18 @@ record(longout, "$(P)$(R)Ch5ASlope")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch5ASlope")
     field(SCAN, "I/O Intr")
 }
-record(longout, "$(P)$(R)Ch5BAdcOff")
+record(longout, "$(P)$(R)Ch5BAdcOffs")
 {
     field(DESC, "Chan5 B ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch5BAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch5BAdcOffs")
     field(SCAN, "I/O Intr")
 }
-record(longout, "$(P)$(R)Ch5AAdcOff")
+record(longout, "$(P)$(R)Ch5AAdcOffs")
 {
     field(DESC, "Chan5 A ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch5AAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch5AAdcOffs")
     field(SCAN, "I/O Intr")
 }
 record(bo, "$(P)$(R)Ch5BAdjEn")
@@ -1108,11 +1108,11 @@ record(bo, "$(P)$(R)Ch5NotEmpty")
     field(ZNAM, "no")
     field(ONAM, "yes")
 }
-record(longout, "$(P)$(R)Ch6AAdcOff")
+record(longout, "$(P)$(R)Ch6AAdcOffs")
 {
     field(DESC, "Chan6 A ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch6AAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch6AAdcOffs")
     field(SCAN, "I/O Intr")
 }
 record(bo, "$(P)$(R)Ch6AAdjEn")
@@ -1185,11 +1185,11 @@ record(longout, "$(P)$(R)Ch6BSlope")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch6BSlope")
     field(SCAN, "I/O Intr")
 }
-record(longout, "$(P)$(R)Ch6BAdcOff")
+record(longout, "$(P)$(R)Ch6BAdcOffs")
 {
     field(DESC, "Chan6 B ADC Offset value")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch6BAdcOff")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch6BAdcOffs")
     field(SCAN, "I/O Intr")
 }
 record(bo, "$(P)$(R)Ch6AdcMax")
@@ -3140,18 +3140,18 @@ record(mbbo, "$(P)$(R)MastDiscSel")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "SUM discr")
-    field(ZRVL, "1")
-    field(ZRST, "A discr")
-    field(ZRVL, "2")
-    field(ZRST, "B discr")
-    field(ZRVL, "3")
-    field(ZRST, "all")
+    field(ONVL, "1")
+    field(ONST, "A discr")
+    field(TWVL, "2")
+    field(TWST, "B discr")
+    field(THVL, "3")
+    field(THST, "all")
 }
-record(bo, "$(P)$(R)Enable")
+record(bo, "$(P)$(R)EnableAcq")
 {
     field(DESC, "ROC enable acquisition")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Enable")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))EnableAcq")
     field(SCAN, "I/O Intr")
     field(VAL,  "1")
     field(ZNAM, "disable")
@@ -3186,10 +3186,10 @@ record(mbbo, "$(P)$(R)OutputMode")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "normal")
-    field(ZRVL, "1")
-    field(ZRST, "raw")
-    field(ZRVL, "2")
-    field(ZRST, "extended")
+    field(ONVL, "1")
+    field(ONST, "raw")
+    field(TWVL, "2")
+    field(TWST, "extended")
 }
 record(mbbo, "$(P)$(R)AcqMode")
 {
@@ -3200,10 +3200,10 @@ record(mbbo, "$(P)$(R)AcqMode")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "normal")
-    field(ZRVL, "1")
-    field(ZRST, "verbose")
-    field(ZRVL, "2")
-    field(ZRST, "fake trigger")
+    field(ONVL, "1")
+    field(ONST, "verbose")
+    field(TWVL, "2")
+    field(TWST, "fake trigger")
 }
 record(bo, "$(P)$(R)TxEnable")
 {
