--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -54,6 +54,8 @@ ned_SRCS  += DmaCopier.cpp
 ned_SRCS  += DasPacket.cpp
 ned_SRCS  += DasPacketList.cpp
 ned_SRCS  += BasePlugin.cpp
+ned_SRCS  += BaseSocketPlugin.cpp
+ned_SRCS  += ProxyPlugin.cpp
 ned_SRCS  += AdaraPlugin.cpp
 ned_SRCS  += CmdDispatcher.cpp
 ned_SRCS  += BaseModulePlugin.cpp
