Reworked state machine to provide synchronous module communication
The general state machine which all modules use has been changed
to limit one command at a time until either response is received
or timeout occurs. With that assumption in place, there can be
single timeout running at any time, making it easy to cancel the
timer when response is received.
Cleaned particular plugins of all timeout handling stuff and making
it generic.
The Status PV, driven by this simple state machine, is signaling
us what's happening to the system.
There are no other limitations enforced at this time until we
understand better the modules behavior and agree on state machine
enforcement design/level.

--- a/ned/nedApp/Db/RocPlugin.template
+++ b/ned/nedApp/Db/RocPlugin.template
@@ -5,7 +5,21 @@ record(mbbi, "$(P)$(R)Status")
     field(DTYP, "asynInt32")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Status")
     field(ZRVL, "0")
-    field(ZRST, "OK")
+    field(ZRST, "Not initialized")
+    field(ONVL, "1")
+    field(ONST, "Error")
+    field(TWVL, "3")
+    field(TWST, "Timeout")
+    field(THVL, "4")
+    field(THST, "Type wait")
+    field(FRVL, "5")
+    field(FRST, "Type OK")
+    field(FVVL, "6")
+    field(FVST, "Version wait")
+    field(SIVL, "7")
+    field(SIST, "Waiting")
+    field(SVVL, "8")
+    field(SVST, "Ready")
     field(SCAN, "I/O Intr")
 }
 record(mbbo, "$(P)$(R)Command")
@@ -14,15 +28,17 @@ record(mbbo, "$(P)$(R)Command")
     field(DTYP, "asynInt32")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Command")
     field(ZRVL, "0")
-    field(ONVL, "1")
-    field(TWVL, "2")
-    field(THVL, "3")
-    field(FRVL, "4")
-    field(ZRST, "No command")
-    field(ONST, "Initialize")
-    field(TWST, "Read status")
-    field(THST, "Write config")
+    field(ONVL, "128")
+    field(TWVL, "32")
+    field(THVL, "34")
+    field(FRVL, "33")
+    field(FVVL, "48")
+    field(ZRST, "Reset")
+    field(ONST, "Discover")
+    field(TWST, "Read version")
+    field(THST, "Read status")
     field(FRST, "Read config")
+    field(FVST, "Write config")
 }
 record(stringin, "$(P)$(R)HwDate")
 {
@@ -39,7 +55,7 @@ record(longin, "$(P)$(R)HwVer")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))HwVer")
     field(VAL,  "0")
     field(SCAN, "I/O Intr")
-}
+
 record(longin, "$(P)$(R)HwRev")
 {
     field(DESC, "Hardware revision")
