--- a/ned/nedApp/Db/DspPlugin.template
+++ b/ned/nedApp/Db/DspPlugin.template
@@ -4,23 +4,31 @@ record(mbbi, "$(P)$(R)Status")
     field(DTYP, "asynInt32")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Status")
     field(ZRVL, "0")
-    field(ZRST, "OK")
-    field(SCAN, "I/O Intr")
-}
-record(mbbo, "$(P)$(R)Command")
-{
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Command")
-    field(ZRVL, "0")
+    field(ZRST, "Not initialized")
     field(ONVL, "1")
-    field(TWVL, "2")
-    field(THVL, "3")
-    field(FRVL, "4")
-    field(ZRST, "No command")
-    field(ONST, "Initialize")
-    field(TWST, "Read status")
-    field(THST, "Write config")
+    field(ONST, "Error")
+    field(TWVL, "3")
+    field(TWST, "Timeout")
+    field(THVL, "4")
+    field(THST, "Type wait")
+    field(FRVL, "5")
+    field(FRST, "Type OK")
+    field(FVVL, "6")
+    field(FVST, "Version wait")
+    field(SIVL, "7")
+    field(SIST, "Waiting")
+    field(SVVL, "8")
+    field(SVST, "Ready")    field(ONVL, "128")
+    field(TWVL, "32")
+    field(THVL, "34")
+    field(FRVL, "33")
+    field(FVVL, "48")
+    field(ZRST, "Reset")
+    field(ONST, "Discover")
+    field(TWST, "Read version")
+    field(THST, "Read status")
     field(FRST, "Read config")
+    field(FVST, "Write config")
 }
 record(stringin, "$(P)$(R)HwDate")
 {
@@ -66,6 +74,7 @@ record(longin, "$(P)$(R)FwVer")
 }
 record(longout, "$(P)$(R)PixIdOffset")
 {
+    info(autosaveFields, "VAL LOW")
     field(DESC, "Pixel id offset")
     field(DTYP, "asynInt32")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))PixIdOffset")
