--- a/ned/nedApp/Db/DspPlugin.template
+++ b/ned/nedApp/Db/DspPlugin.template
@@ -1,5 +1,6 @@
 record(mbbi, "$(P)$(R)Status")
 {
+    field(DESC, "Status of RocPlugin")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Status")
@@ -15,20 +16,33 @@ record(mbbi, "$(P)$(R)Status")
     field(FRST, "Type OK")
     field(FVVL, "6")
     field(FVST, "Version wait")
-    field(SIVL, "7")
-    field(SIST, "Waiting")
+    field(SXVL, "7")
+    field(SXST, "Waiting")
     field(SVVL, "8")
-    field(SVST, "Ready")    field(ONVL, "128")
-    field(TWVL, "32")
-    field(THVL, "34")
-    field(FRVL, "33")
-    field(FVVL, "48")
+    field(SVST, "Ready")
+    field(SCAN, "I/O Intr")
+}
+record(mbbo, "$(P)$(R)Command")
+{
+    field(DESC, "Issue RocPlugin command")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Command")
+    field(ZRVL, "0")
     field(ZRST, "Reset")
+    field(ONVL, "128")
     field(ONST, "Discover")
+    field(TWVL, "32")
     field(TWST, "Read version")
+    field(THVL, "34")
     field(THST, "Read status")
+    field(FRVL, "33")
     field(FRST, "Read config")
+    field(FVVL, "48")
     field(FVST, "Write config")
+    field(SXVL, "130")
+    field(SXST, "Start acquisition")
+    field(SVVL, "131")
+    field(SVST, "Stop acquisition")
 }
 record(stringin, "$(P)$(R)HwDate")
 {
