--- a/ned/nedApp/Db/FemPlugin.template
+++ b/ned/nedApp/Db/FemPlugin.template
@@ -1,5 +1,6 @@
 record(mbbi, "$(P)$(R)Status")
 {
+    field(DESC, "Status of FemPlugin")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Status")
@@ -15,31 +16,37 @@ record(mbbi, "$(P)$(R)Status")
     field(FRST, "Type OK")
     field(FVVL, "6")
     field(FVST, "Version wait")
-    field(SIVL, "7")
-    field(SIST, "Waiting")
+    field(SXVL, "7")
+    field(SXST, "Waiting")
     field(SVVL, "8")
     field(SVST, "Ready")
     field(SCAN, "I/O Intr")
 }
 record(mbbo, "$(P)$(R)Command")
 {
+    field(DESC, "Issue FemPlugin command")
     field(DTYP, "asynInt32")
     field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Command")
     field(ZRVL, "0")
-    field(ONVL, "128")
-    field(TWVL, "32")
-    field(THVL, "34")
-    field(FRVL, "33")
-    field(FVVL, "48")
     field(ZRST, "Reset")
+    field(ONVL, "128")
     field(ONST, "Discover")
+    field(TWVL, "32")
     field(TWST, "Read version")
+    field(THVL, "34")
     field(THST, "Read status")
+    field(FRVL, "33")
     field(FRST, "Read config")
+    field(FVVL, "48")
     field(FVST, "Write config")
+    field(SXVL, "130")
+    field(SXST, "Start acquisition")
+    field(SVVL, "131")
+    field(SVST, "Stop acquisition")
 }
 record(stringin, "$(P)$(R)HwDate")
 {
+    field(DESC, "Hardware date")
     field(DTYP, "asynOctetRead")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))HwDate")
     field(VAL,  "Unknown")
@@ -47,6 +54,7 @@ record(stringin, "$(P)$(R)HwDate")
 }
 record(longin, "$(P)$(R)HwRev")
 {
+    field(DESC, "Hardware revision")
     field(DTYP,  "asynInt32")
     field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))HwRev")
     field(VAL,   "0")
@@ -54,6 +62,7 @@ record(longin, "$(P)$(R)HwRev")
 }
 record(longin, "$(P)$(R)HwVer")
 {
+    field(DESC, "Hardware version")
     field(DTYP,  "asynInt32")
     field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))HwVer")
     field(VAL,   "0")
@@ -61,6 +70,7 @@ record(longin, "$(P)$(R)HwVer")
 }
 record(stringin, "$(P)$(R)FirmwareDate")
 {
+    field(DESC, "Firmware date")
     field(DTYP, "asynOctetRead")
     field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))FwDate")
     field(VAL,  "Unknown")
@@ -68,6 +78,7 @@ record(stringin, "$(P)$(R)FirmwareDate")
 }
 record(longin, "$(P)$(R)FirmwareRev")
 {
+    field(DESC, "Firmware revision")
     field(DTYP,  "asynInt32")
     field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))FwRev")
     field(VAL,   "0")
@@ -75,6 +86,7 @@ record(longin, "$(P)$(R)FirmwareRev")
 }
 record(longin, "$(P)$(R)FirmwareVer")
 {
+    field(DESC, "Firmware version")
     field(DTYP,  "asynInt32")
     field(INP,   "@asyn($(PORT),$(ADDR),$(TIMEOUT))FwVer")
     field(VAL,   "0")
