--- a/occhwtools/Makefile
+++ b/occhwtools/Makefile
@@ -1,6 +1,6 @@
 CPPFLAGS=-Wall -I../occlib/
-LDFLAGS=-L../occlib -locc -lpthread -lrt
-SRCS=occ_loopback.cpp occ_rawio.cpp occ_dump.cpp
+LDFLAGS=-L../occlib -locc -lpthread -lrt -lboost_iostreams
+SRCS=occ_loopback.cpp occ_rawio.cpp occ_dump.cpp occ_flashprog.cpp
 HDRS=
 BINS=$(SRCS:.cpp=)
 OBJS=$(SRCS:.cpp=.o)
