StatPlugin to show incoming packets statistics through PVs.

--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -18,6 +18,7 @@ DB += DspPlugin.template
 DB += RocPlugin.template
 DB += FemPlugin.template
 DB += DumpPlugin.template
+DB += StatPlugin.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
