--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -64,6 +64,7 @@ ned_SRCS  += RocPlugin.cpp
 ned_SRCS  += FemPlugin.cpp
 ned_SRCS  += DiscoverPlugin.cpp
 ned_SRCS  += DumpPlugin.cpp
+ned_SRCS  += StatPlugin.cpp
 
 ned_DOXS  += DspPlugin.dox
 ned_DOXS  += RocPlugin.dox
