Extended OCC status and make is visible through PVs
Extended PCIe information, like FPGA temp, optical RX and TX
power and other inforation is available through PVs for debugging
the OCC.

--- a/occlib/Makefile
+++ b/occlib/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-Wall -I../occdriver
 #CFLAGS+=-DRX_DUMP_PATH="/tmp/occ.dump" -DTX_DUMP_PATH="/tmp/occ_tx.dump"
 LDFLAGS=
-SRCS=occlib.c
+SRCS=occlib.c i2c.c
 SIMSRCS=occlib_sim.c
 HDRS=occlib.h occlib_hw.h
 LIBNAME=occ
