Added support for enabling/disabling error packets from FPGA
PCI-X and PCIe both support transforming detected link
errors into error packets. The feature can be turned on or
off dynamically, but it was not supported so far. Added driver
support, a new interface in occlib and corresponding PV in nED.

In addition, PCIe also provides 3 registers with error counters
which are by default never cleared. Software can do it
dynamically. Right now the driver is reseting the counters at
every device reset. We might change it later if found useful.

--- a/ned/nedApp/Db/ned.template
+++ b/ned/nedApp/Db/ned.template
@@ -20,10 +20,17 @@ record(mbbo, "$(P)$(R)Command")
     field(ZRVL, "0")
     field(ONVL, "1")
     field(TWVL, "2")
+    field(THVL, "3")
+    field(FRVL, "4")
     field(ZRST, "None")
     field(ONST, "Optics enable")
     field(TWST, "Optics disable")
+    field(THST, "Error packets enable")
+    field(FRST, "Error packets disable")
+    field(PINI, "YES")
+    field(VAL,  "1")
 }
+
 record(mbbi, "$(P)$(R)BoardStatus")
 {
     field(DESC, "OCC board status")
@@ -81,6 +88,16 @@ record(bi, "$(P)$(R)OpticsEnabled")
     field(ZNAM, "No")
     field(ONAM, "Yes")
     field(SCAN, "1 second")
+}
+record(bi, "$(P)$(R)ErrPktsEnabled")
+{
+    field(DESC, "Turn link errors into error packets")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ErrPktsEnabled")
+    field(ZNAM, "No")
+    field(ONAM, "Yes")
+    field(PINI, "YES")
+    field(VAL,  "0")
 }
 record(ai, "$(P)$(R)FpgaTemp")
 {
